# C-Virtual-Memory-System

./: CMakeLists.txt  Makefile  README.md  README.txt  analysis.txt  clock.c  fifo.c  lru.c  mru.c  pagetable.c  pagetable.h  rand.c  sim.c  sim.h  swap.c  swap.h
